'CodeHeap is full' warning suggests to increase wrong code heap size

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b40

        [2014-10-11T20:19:20.63] Java HotSpot(TM) 64-Bit Server VM warning: CodeHeap 'non-nmethods' is full. Compiler has been disabled.
        [2014-10-11T20:19:20.63] Java HotSpot(TM) 64-Bit Server VM warning: Try increasing the code heap size using -XX:ProfiledCodeHeapSize=
        [2014-10-11T20:19:20.64] CodeHeap 'non-nmethods': size=8568Kb used=8068Kb max_used=8068Kb free=499Kb
        [2014-10-11T20:19:20.64] bounds [0xffffffff66800000, 0xffffffff67050000, 0xffffffff6705e000]
        [2014-10-11T20:19:20.64] CodeHeap 'profiled nmethods': size=118600Kb used=49728Kb max_used=49728Kb free=68871Kb
        [2014-10-11T20:19:20.64] bounds [0xffffffff6705e000, 0xffffffff6a19e000, 0xffffffff6e430000]
        [2014-10-11T20:19:20.64] CodeHeap 'non-profiled nmethods': size=118600Kb used=8792Kb max_used=8806Kb free=109807Kb
        [2014-10-11T20:19:20.64] bounds [0xffffffff6e430000, 0xffffffff6ecd0000, 0xffffffff75802000]
        [2014-10-11T20:19:20.64] total_blobs=13382 nmethods=8544 adapters=4756
        [2014-10-11T20:19:20.64] compilation: disabled (not enough contiguous free space left)

        The suggestion "Try increasing the code heap size using -XX:ProfiledCodeHeapSize=" should be "Try increasing the code heap size using -XX:NonNMethodCodeHeapSize=" .

              Assignee:
              Tobias Hartmann
              Reporter:
              Tobias Hartmann
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: