8060196: 'CodeHeap is full' warning suggests to increase wrong code heap size

Fixed 'CodeHeap is full' warning to output the right CodeHeapSize flag.

Reviewed-by: kvn, anoll